# kernel

./: .editorconfig  .gitignore  .gitmodules  .rustfmt.toml  .rusty-hook.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  build.rs  clippy.toml  rust-toolchain.toml  rustc-ice-2024-07-29T12_16_20-26534.txt  rustc-ice-2024-07-29T12_17_48-26716.txt
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml
asset/: EnterCommand.txt
dbgutil/: README.md  requirements.txt
oro-acpi/: Cargo.toml
oro-acpi/src/: lib.rs  madt.rs  mcfg.rs
oro-acpica-sys/: Cargo.toml  README.md  build.rs  oro-acpica-sys.h
oro-acpica-sys/src/: lib.rs
oro-arch/: Cargo.toml
oro-arch-aarch64/: Cargo.toml  aarch64-unknown-oro.json  arch.x  build.rs  entry.rs  preboot.x
oro-arch-aarch64/src/: arch.rs  asm.rs  core_local.rs  dbgutil.rs  init.rs  instance.rs  lib.rs  mair.rs  mem.rs  pl011.rs  psci.rs  reg.rs  sync.rs  syscall.rs  thread.rs  time.rs  xfer.rs
oro-arch-aarch64/src/boot/: memory.rs  mod.rs  protocol.rs  secondary.rs
oro-arch-aarch64/src/mem/: address_space.rs  layout.rs  mod.rs  paging.rs  segment.rs
oro-arch-aarch64/src/mem/mapper/: kernel.rs  mod.rs  preboot.rs
oro-arch-aarch64/src/reg/: field.rs  mair.rs  mod.rs  sctlr_el1.rs  tcr_el1.rs
oro-arch-x64/: Cargo.toml
oro-arch-x64/src/: lib.rs
oro-arch-x86_64/: Cargo.toml  arch.x  build.rs  entry.rs  preboot.x  x86_64-unknown-oro.json
oro-arch-x86_64/src/: acpi.rs  arch.rs  asm.rs  common-post.S  common-pre.S  core_local.rs  dbgutil.rs  descriptor.rs  gdt.rs  handler.rs  hpet.rs  idt.rs  init.rs  instance.rs  interrupt.rs  lapic.rs  lib.rs  mem.rs  paging.rs  reg.rs  sync.rs  syscall.rs  task.rs  thread.rs  time.rs  tss.rs  xfer.rs
oro-arch-x86_64/src/boot/: memory.rs  mod.rs  primary.rs  protocol.rs  root_ring.rs  secondary.rs
oro-arch-x86_64/src/cpuid/: a01c0.rs  a07c0.rs  a07c1.rs  a07c2.rs  a0dc0.rs  mod.rs
oro-arch-x86_64/src/iface/: mod.rs  tls_base_v0.rs
oro-arch-x86_64/src/interrupt/: default.rs  idt.rs  install.rs  isr.rs  isr64.S  isr_apic_svr.rs  isr_page_fault.rs  macros.rs  mod.rs
oro-arch-x86_64/src/interrupt/kernel/: default_isr.rs  isr_sys_timer.rs  mod.rs
oro-arch-x86_64/src/mem/: address_space.rs  layout.rs  mod.rs  paging.rs  paging_level.rs  pfa.rs  preboot_mapper.rs  recursive_mapper.rs  segment.rs
oro-arch-x86_64/src/reg/: cr0.rs  cr4.rs  mod.rs
oro-arch-x86_64/src/syscall/: mod.rs  syscall.S
oro-arch/src/: lib.rs
oro-boot/: Cargo.toml  xfer.x
oro-boot-limine/: Cargo.toml  build.rs
oro-boot-limine-x64/: Cargo.toml  build.rs  limine.cfg  link.ld
oro-boot-limine-x64/src/: main.rs
oro-boot-protocol/: Cargo.toml  build.rs  test-boot-header.sh
oro-boot-protocol/src/: lib.rs  macros.rs  util.rs  utils.rs
oro-boot/src/: init.rs  lib.rs  map.rs  pfa.rs  x86_64.rs
oro-bootloader-common/: Cargo.toml
oro-bootloader-limine/: Cargo.toml  build.rs
oro-bootloader-limine/src/: lib.rs
oro-common/: Cargo.toml
oro-common-assertions/: Cargo.toml
oro-common-assertions/src/: lib.rs
oro-common-elf/: Cargo.toml
oro-common-elf/src/: lib.rs
oro-common-macro/: Cargo.toml
oro-common-macro-proc/: Cargo.toml
oro-common-macro/src/: enum_iterator.rs  lib.rs  unsafe_macros.rs
oro-common-proc/: Cargo.toml
oro-common-proc/src/: lib.rs  paste.rs  ser2mem.rs  tests.rs  vla.rs
oro-common-proc/src/syn_ex/: attr.rs  mod.rs  repr.rs
oro-common-proc/tests/: Cargo.toml
oro-common-proc/tests/src/: lib.rs
oro-common-sync/: Cargo.toml
oro-common-sync/src/: lib.rs
oro-common-sync/src/spinlock/: unfair_critical.rs
oro-common/src/: arch.rs  boot.rs  dbg.rs  dbgutil.py  dbgutil.rs  elf.rs  init.rs  interrupt.rs  lib.rs  lock.rs  macros.rs  mem.rs  preboot.rs  proc.rs  ser2mem.rs  sync.rs  unsafe_macros.rs
oro-common/src/mem/: mapper.rs  mod.rs  pfa.rs  pfa_filo.rs  region.rs  ser2mem.rs  translate.rs
oro-common/src/mem/pfa/: alloc.rs  filo.rs  mmap.rs  mod.rs  pof_mmap.rs  tracker.rs
oro-common/src/sync/: barrier.rs  mod.rs  spinlock.rs
oro-common/src/sync/spinlock/: mod.rs  unfair.rs  unfair_critical.rs
oro-common/src/util/: assertions.rs  erased.rs  macros.rs  mod.rs  proxy.rs  unsafe_macros.rs
oro-dbgutil/: Cargo.toml
oro-dbgutil/src/: lib.rs
oro-debug/: Cargo.toml
oro-debug-uart16550/: Cargo.toml
oro-debug-uart16550/src/: lib.rs
oro-debug/src/: dbgutil.py  lib.rs  ringbuffer.rs  uart16550.rs
oro-debug/src/pl011/: mod.rs
oro-dtb/: Cargo.toml
oro-dtb/src/: lib.rs
oro-elf/: Cargo.toml
oro-elf/src/: lib.rs
oro-id/: Cargo.toml  README.md
oro-id/script/: randgen.rs
oro-id/src/: lib.rs
oro-kernel-acpi/: Cargo.toml
oro-kernel-acpi/src/: lib.rs  madt.rs
oro-kernel-acpica-sys/: Cargo.toml  build.rs
oro-kernel-acpica-sys/src/: lib.rs
oro-kernel-arch-aarch64/: Cargo.toml  aarch64-unknown-oro.json  arch.x  build.rs  entry.rs
oro-kernel-arch-aarch64/src/: core_local.rs  init.rs  instance.rs  lib.rs  mair.rs  thread.rs
oro-kernel-arch-aarch64/src/boot/: memory.rs  mod.rs  protocol.rs  secondary.rs
oro-kernel-arch-aarch64/src/mem/: address_space.rs  mod.rs  paging.rs  segment.rs
oro-kernel-arch-aarch64/src/reg/: tcr_el1.rs
oro-kernel-arch-x86_64/: Cargo.toml  build.rs  entry.rs  x86_64-unknown-oro.json
oro-kernel-arch-x86_64/src/: asm.rs  core_local.rs  hpet.rs  instance.rs  lapic.rs  lib.rs  thread.rs  tss.rs
oro-kernel-arch-x86_64/src/boot/: memory.rs  mod.rs  primary.rs  protocol.rs  root_ring.rs  secondary.rs
oro-kernel-arch-x86_64/src/cpuid/: a01c0.rs
oro-kernel-arch-x86_64/src/iface/: mod.rs  tls_base_v0.rs
oro-kernel-arch-x86_64/src/interrupt/: default.rs  idt.rs  install.rs  isr.rs  mod.rs
oro-kernel-arch-x86_64/src/mem/: address_space.rs  mod.rs  paging.rs  segment.rs
oro-kernel-arch-x86_64/src/reg/: cr0.rs  cr4.rs
oro-kernel-arch-x86_64/src/syscall/: mod.rs  syscall.S
oro-kernel-elf/: Cargo.toml
oro-kernel-elf/src/: lib.rs
oro-kernel-macro/: Cargo.toml
oro-kernel-macro/src/: assert.rs  lib.rs  tests.rs
oro-kernel-pci/: Cargo.toml
oro-kernel-pci/src/: lib.rs
(+392 files in other folders)
