[workspace.package]
homepage   = "https://oro.sh"
repository = "https://github.com/oro-os/kernel"
license    = "MPL-2.0"
version    = "0.0.0"
edition    = "2024"

[workspace]
resolver = "2"
members = [
	"orok-test-tui",
	"orok-boot-limine",
]
default-members = ["orok-test-tui"]

[workspace.metadata.oro]
build-std          = ["alloc", "compiler_builtins", "core"]
build-std-features = ["compiler-builtins-mem"]

[workspace.metadata.oro.target.x86_64]
target-json = "oro-kernel-arch-x86_64/x86_64-unknown-oro.json"
features    = ["oro-debug/uart16550"]

[workspace.metadata.oro.target.aarch64]
target-json = "oro-kernel-arch-aarch64/aarch64-unknown-oro.json"
features    = ["oro-debug/pl011"]

[workspace.dependencies]
orok-arch.path = "orok-arch"
orok-arch-base.path = "orok-arch-base"
orok-arch-aarch64.path = "orok-arch-aarch64"
orok-arch-x86_64.path = "orok-arch-x86_64"
orok-arch-riscv64.path = "orok-arch-riscv64"
orok-macro.path = "orok-macro"
orok-macro-proc.path = "orok-macro-proc"
orok-type.path = "orok-type"
orok-test.path = "orok-test"
orok-test-harness.path = "orok-test-harness"
orok-test-consts.path = "orok-test-consts"
orok-test-proc.path = "orok-test-proc"

# External dependencies
limine                 = "=0.5.0"
#uart_16550             = "=0.3.2"
#volatile-register      = "=0.2.2"
#buddy_system_allocator = "=0.11.0"
#hashbrown              = { version = "=0.15.2", default-features = false, features = ["allocator-api2", "inline-more", "nightly"] }
#foldhash               = { version = "=0.1.4", default-features = false }
#nolock                 = { version = "=0.4.1", default-features = false, features = ["queues"] }

# Development dependencies
#bindgen      = "=0.71.1"
syn          = { version = "=2.0.100", features = ["full", "printing"] }
quote        = "=1.0.40"
proc-macro2  = { version = "=1.0.94", features = ["proc-macro"] }
#convert_case = "=0.6.0"

# `oroutil` dependencies
#fast-glob            = "=0.4.5"
#clap                 = { version = "=4.5.40", features = ["derive"] }
#log                  = "=0.4.27"
#colog                = "=1.3.0"
#serde                = { version = "=1.0.219", features = ["derive"] }
#serde_json           = "=1.0.140"
#ignore               = "=0.4.23"
#similar              = "=2.7.0"
#taplo                = "=0.14.0"
#strum                = { version = "=0.27.1", features = ["derive"] }
#cargo_metadata       = "=0.20.0"
#indicatif            = "=0.18.3"
#indicatif-log-bridge = "=0.2.3"
#build-plan           = "=0.1.1"

# Testing dependencies
tokio = { version = "1.49.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync"] }
thiserror = "2.0.18"

[workspace.lints.rust]
missing_docs              = "warn"
elided_lifetimes_in_paths = "deny"
future-incompatible       = "warn"
missing-unsafe-on-extern  = "warn"
unused-lifetimes          = "warn"
unused-qualifications     = "warn"
unused-import-braces      = "warn"
variant-size-differences  = "warn"
trivial-numeric-casts     = "warn"
unit-bindings             = "warn"
unsafe_op_in_unsafe_fn 	  = "deny"

[workspace.lints.rustdoc]
all                     = { level = "deny", priority = -1 }
private_doc_tests       = "allow"
private_intra_doc_links = "allow"

[workspace.lints.clippy]
all                                = { level = "warn", priority = -1 }
pedantic                           = { level = "warn", priority = -1 }
restriction                        = { level = "warn", priority = -1 }
nursery                            = { level = "warn", priority = -1 }
cargo                              = { level = "warn", priority = -1 }
suspicious                         = { level = "warn", priority = -1 }
style                              = { level = "warn", priority = -1 }
perf                               = { level = "warn", priority = -1 }
missing_docs_in_private_items      = "warn"
integer_division                   = "warn"
module_name_repetitions            = "allow"
verbose_bit_mask                   = "allow"
too_many_lines                     = "allow"
missing_errors_doc                 = "allow"
struct_field_names                 = "allow"
items_after_statements             = "allow"
cast_possible_truncation           = "allow"
assertions_on_constants            = "allow"
new_without_default                = "allow"
needless_doctest_main              = "allow"
tabs_in_doc_comments               = "allow"
redundant_closure_for_method_calls = "allow"
undocumented_unsafe_blocks = "deny"
default_numeric_fallback  = "allow"
implicit_return = "allow"
semicolon_inside_block = "warn"
semicolon_outside_block = "allow"
arbitrary_source_item_ordering = "allow"
pub_use  = "allow"
self_named_module_files = "deny"
mod_module_files = "allow"
inline_asm_x86_intel_syntax = "allow"
inline_asm_x86_att_syntax = "deny"
question_mark_used = "allow"
missing_trait_methods = "allow"
multiple_inherent_impl = "allow"
# While useful and technically correct, highly annoying to the point of being unhelpful.
pattern_type_mismatch = "allow"
# Shadowing could technically present bugs, but in practice is often used for convenience
# and due to extensive type strictness rarely causes issues. Disallowing it everywhere would
# likely just lead to widespread use of non-ideal variable names.
shadow_reuse = "allow"
shadow_unrelated = "allow"
unseparated_literal_suffix = "allow"
separated_literal_suffix = "warn"
pub_with_shorthand = "allow"
pub_without_shorthand = "warn"
field_scoped_visibility_modifiers = "allow"
# We've tweaked them here to a decent enough extent that an appropriate level of "annoying"
# has been achieved codebase-wide.
blanket_clippy_restriction_lints = "allow"
# LTO is enabled, making this a moot point.
missing_inline_in_public_items = "allow"
# All crates in this workspace are typically built "together" and are
# only split out for organizational purposes. Treating each as though
# they have a "public API" is nonsensical in our case, and the resulting
# warnings are more noise than signal.
exhaustive_structs = "allow"
exhaustive_enums = "allow"
# Similar to the above, there's no public API in the traditional sense,
# so if an `arg: impl Foo` is insufficient, it can be changed.
impl_trait_in_params = "allow"
# Way too noisy, not particularly helpful. This will need some
# judicious review otherwise, but should be manageable.
min_ident_chars = "allow"
# We are smart enough :)
little_endian_bytes = "allow"
big_endian_bytes = "allow"
host_endian_bytes = "allow"

[profile.dev]
panic = "abort" # Use "abort" panic strategy
debug = "full" # Full debugging symbols

[profile.release]
opt-level     = 3 # Maximum optimizations
lto           = "fat" # Perform LTO across all crates
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
strip         = true # Strip symbols from binary
incremental   = false # Disable incremental building
panic         = "abort" # Use "abort" panic strategy
debug         = 0 # Do not generate debug information

[profile.relwithdebinfo]
inherits = "release"
debug    = "full" # Full debugging symbols
strip    = false # Don't strip symbols from binary
