[package]
name = "oro-acpi"
version.workspace = true
description = "Advanced Configuration and Power Interface (ACPI) support for Oro"
publish = false
edition = "2021"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/kernel"
license = "MPL-2.0"

[lib]
doctest = false

[dependencies]
oro-acpica-sys.workspace = true
oro-common.workspace = true
oro-common-assertions.workspace = true
oro-common-proc.workspace = true

[lints]
workspace = true
