[package]
name = "oro-arch-aarch64"
version.workspace = true
description = "Oro operating system AArch64 architecture kernel implementation"
publish = false
edition = "2021"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/kernel"
license = "MPL-2.0"
autobins = false

build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "oro-kernel-aarch64"
path = "entry.rs"
doc = false

[dependencies]
oro-kernel.workspace = true
oro-boot-protocol.workspace = true
oro-common-mem.workspace = true
oro-common-macro.workspace = true
oro-common-elf.workspace = true
oro-common-sync.workspace = true
oro-debug.workspace = true

[lints]
workspace = true
