[package]
name = "oro-arch-aarch64"
version.workspace = true
description = "Oro operating system AArch64 architecture kernel implementation"
publish = false
edition = "2024"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/kernel"
license = "MPL-2.0"
autobins = false

build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "oro-kernel-aarch64"
path = "entry.rs"
doc = false

[dependencies]
oro-kernel.workspace = true
oro-boot-protocol.workspace = true
oro-mem.workspace = true
oro-macro.workspace = true
oro-elf.workspace = true
oro-debug.workspace = true
oro-dbgutil.workspace = true
oro-dtb.workspace = true
oro-type.workspace = true
oro-sync.workspace = true

# Work around non-composability of `test` profile and global allocator conflicts in unit test runner.
[dev-dependencies]
oro-mem = { workspace = true, features = ["std-alloc"] }

[lints]
workspace = true
