[package]
name = "oro-arch-x64"
description = "Oro kernel boot protocol structures for the x86_64 architecture"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
test = false
bench = false

[dependencies]
oro-ser2mem = { path = "../oro-ser2mem" }
