[package]
name                 = "oro-arch-x86_64"
version.workspace    = true
description          = "Oro operating system x86_64 architecture abstraction layer"
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
autobins             = false

[package.metadata.oro]
target = "x86_64"
no-std = true

[dependencies]
oro-kernel-macro.workspace = true
oro-kernel-type.workspace  = true

[lints]
workspace = true
