[package]
name = "oro-boot-limine-x64"
description = "Limine bootloader support for the Oro Operating System on the x86_64"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

build = "build.rs"

[[bin]]
name = "oro-boot-limine-x64"
path = "./src/main.rs"
test = false
bench = false

[dependencies]
oro-arch-x64 = { path = "../oro-arch-x64" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
limine = "0.2.0"
uart_16550 = "0.2.18"
elf = { version = "0.7.2", default-features = false }

[target.'cfg(target_arch="x86_64")'.dependencies]
x86_64 = "0.14.10"
