[package]
name = "oro-boot-protocol"
version.workspace = true
description = "Boot protocol for the Oro kernel"
publish = false
edition = "2021"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/kernel"
license = "MPL-2.0"

[lib]
doctest = false

[dependencies]
oro-common-assertions.workspace = true
oro-common-proc.workspace = true
