[package]
name = "oro-boot-protocol"
version.workspace = true
description = "Boot protocol for the Oro kernel"
publish = false
edition = "2021"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/kernel"
license = "MPL-2.0"

build = "build.rs"

[lib]
doctest = false

[features]
default = []
utils = []

[dependencies]
oro-macro.workspace = true

[build-dependencies]
syn.workspace = true
convert_case.workspace = true

[lints]
workspace = true
