[package]
name = "oro-boot"
version.workspace = true
description = "Boot routine for the Oro kernel"
publish = false
edition = "2021"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/kernel"
license = "MPL-2.0"

[lib]
doctest = false

[dependencies]
oro-common.workspace = true
oro-common-assertions.workspace = true
oro-common-elf.workspace = true
oro-common-proc.workspace = true
oro-boot-protocol = { workspace = true, features = ["utils"] }
oro-debug.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
oro-arch-x86_64.workspace = true

[target.'cfg(target_arch = "aarch64")'.dependencies]
oro-arch-aarch64.workspace = true

[lints]
workspace = true
