[package]
name = "oro-bootloader-limine"
description = "Oro operating system Limine bootloader support"
publish = false
edition = "2021"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/kernel"
license = "MPL-2.0"
autobins = false

[[bin]]
name = "oro-limine-x86_64"
path = "bin/x86_64.rs"

[dependencies]
oro-common.workspace = true
oro-bootloader-common.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
oro-arch-x86_64.workspace = true
