[package]
name = "oro-bootloader-limine"
version.workspace = true
description = "Oro operating system Limine bootloader support"
publish = false
edition = "2021"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/kernel"
license = "MPL-2.0"
autobins = false

build = "build.rs"

[[bin]]
name = "oro-limine-x86_64"
path = "bin/x86_64.rs"
doc = false

[[bin]]
name = "oro-limine-aarch64"
path = "bin/aarch64.rs"
doc = false

[features]
default = ["unstable"]
unstable = ["oro-arch-aarch64/unstable"]

[dependencies]
oro-common.workspace = true
limine.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
oro-arch-x86_64.workspace = true

[target.'cfg(target_arch = "aarch64")'.dependencies]
oro-arch-aarch64.workspace = true
