[package]
name              = "oro-bootloader-limine"
version.workspace = true
description       = "Oro operating system Limine bootloader support"
publish           = false
edition           = "2024"
authors           = ["Josh Junon (https//github.com/qix-)"]
homepage          = "https://oro.sh"
repository        = "https://github.com/oro-os/kernel"
license           = "MPL-2.0"
autobins          = false

build = "build.rs"

[[bin]]
name = "oro-limine-x86_64"
path = "bin/x86_64.rs"
doc  = false

[[bin]]
name = "oro-limine-aarch64"
path = "bin/aarch64.rs"
doc  = false

[dependencies]
oro-boot.workspace          = true
oro-boot-protocol.workspace = true
oro-debug.workspace         = true
limine.workspace            = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
oro-arch-x86_64.workspace = true

[lints]
workspace = true
