[package]
name = "oro-common-assertions"
version.workspace = true
description = "Common library of static/const assertions for the Oro Operating System"
publish = false
edition = "2021"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/kernel"
license = "MPL-2.0"

[lib]
doctest = false
