[package]
name = "oro-common-elf"
version.workspace = true
description = "Common ELF parser for the Oro kernel and bootloader development"
publish = false
edition = "2021"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/kernel"
license = "MPL-2.0"

[lib]
doctest = false

[dependencies]
oro-common-macro.workspace = true

[lints]
workspace = true
