[package]
name = "oro-common-proc"
version.workspace = true
description = "Proc macros for the Oro OS commons library"
publish = false
edition = "2021"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/kernel"
license = "MPL-2.0"

[lib]
proc-macro = true
doctest = false

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
