[package]
name = "oro-common-sync"
version.workspace = true
description = "Common synchronization primitives used throughout the kernel"
publish = false
edition = "2021"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/kernel"
license = "MPL-2.0"

[lib]
doctest = false

[lints]
workspace = true
