[package]
name = "oro-common"
version.workspace = true
description = "Common functionality for the Oro kernel crates"
publish = false
edition = "2021"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/kernel"
license = "MPL-2.0"

[lib]
doctest = false

[features]
default = []
dbgutil = []

# Do NOT enable this feature for preboot environments.
# It acts as a somewhat tight-coupling of functionality
# that is not stable nor guaranteed to be available in all
# cases and that preboot environments MUST NOT rely on.
kernel = []

[dependencies]
oro-common-proc.workspace = true
static_assertions.workspace = true
