[package]
name = "oro-common"
version.workspace = true
description = "Common functionality for the Oro kernel crates"
publish = false
edition = "2021"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/kernel"
license = "MPL-2.0"

[lib]
doctest = false

[features]
default = []
dbgutil = []

[dependencies]
oro-common-proc.workspace = true
oro-common-assertions.workspace = true
