[package]
name = "oro-dbgutil"
version.workspace = true
description = "Dbgutil stubs for the Oro kernel"
publish = false
edition = "2024"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/kernel"
license = "MPL-2.0"

[lib]
doctest = false

[features]
default = []
# Forces hook functions to remain even in release builds
force-hooks = []

[dependencies]
oro-macro.workspace = true

[lints]
workspace = true
