[package]
name = "oro-debug-uart16550"
version.workspace = true
description = "16550 UART driver for x86_64 I/O port serial output, used for Oro kernel debug output"
publish = false
edition = "2021"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/kernel"
license = "MPL-2.0"

[dependencies]
oro-sync.workspace = true
uart_16550.workspace = true

[lints]
workspace = true
