[package]
name = "oro-debug"
version.workspace = true
description = "Debugging utilities for the Oro kernel and bootloader development"
publish = false
edition = "2021"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/kernel"
license = "MPL-2.0"

[lib]
doctest = false

[features]
default = ["dbgutil"]
dbgutil = ["dep:oro-common-proc"]
pl011 = ["dep:oro-debug-pl011"]
uart16550 = ["dep:oro-debug-uart16550"]

[dependencies]
oro-common-proc = { workspace = true, optional = true }
oro-debug-pl011 = { workspace = true, optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
oro-debug-uart16550 = { workspace = true, optional = true }

[lints]
workspace = true
