[package]
name = "oro-dtb"
version.workspace = true
description = "DeviceTree blob reader for the Oro kernel"
publish = false
edition = "2024"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/kernel"
license = "MPL-2.0"

[lib]
doctest = false

[dependencies]
oro-type.workspace = true

[lints]
workspace = true
