[package]
name = "oro-id"
version.workspace = true
description = "Oro operating system module ID type / parser / formatter"
publish = false
edition = "2021"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/kernel"
license = "MPL-2.0"

[lints]
workspace = true
