[package]
name              = "oro-kernel-acpi"
version.workspace = true
description       = "Advanced Configuration and Power Interface (ACPI) support for Oro"
publish           = false
edition           = "2024"
authors           = ["Josh Junon (https//github.com/qix-)"]
homepage          = "https://oro.sh"
repository        = "https://github.com/oro-os/kernel"
license           = "MPL-2.0"

[package.metadata.oro]
target = ["x86_64"]

[lib]
doctest = false

[dependencies]
oro-kernel-acpica-sys.workspace = true
oro-kernel-mem.workspace        = true
oro-kernel-macro.workspace      = true

[lints]
workspace = true
